@@ -3,7 +3,7 @@ TODO list for molarity (HTML5 port)
 BUGS
 
 HIGH
-- finish BeakerNode port (ticks, label)
+- PrecipitateNode is ridiculously slow when adding particles
 
 MEDIUM
 
