@@ -1,3 +1,4 @@
+5/24/13 first attempt at precipitate view, ridiculously slow for some reason
 5/24/13 add "Saturated!" indicator
 5/24/13 add Solute combo box
 5/24/13 port SolutionNode without constructive area geometry
